Fix some changes 24-25